    thanks to Drew Parsons.
  * Fix testroot rule broken since 0.4.54. Closes: bug#532262, thanks to
    Frédéric Brière.
  * Fix makefile.mk to cleanup before cleanbuilddir (not in parallel).
    Closes: bug#521711, thanks to Raúl Sánchez Siles.
  * Fix perlmodule-vars.mk to work with recent MakeMaker (set DESTDIR
    instead of PREFIX). Closes: bug#534895, thanks to Kevin Ryde.
  [ Peter Eisentraut ]
  * Document the class for KDE 4 provided by pkg-kde-tools, and document the
    KDE 3 class as obsolescent.  Move up the cmake section so the order makes
    sense again. (closes: #520383)
  * Allow JAVACMD to include options (patch by Matthias Klose) (ant.mk) 
    (closes: #520105)
  * Reenabled the ant-1 test
  * Added support for lzma-compressed tarballs (patch by Robert Millan) 
    (buildcore.mk, tarball.mk) (closes: #529355); added test case

 -- Jonas Smedegaard <dr@jones.dk>  Mon, 27 Apr 2009 17:56:24 +0200

cdbs (0.4.56) unstable; urgency=low

  * Simplify logic in autotools, makefile and debhelper snippets:
    $(if A,A,B) -> $(or A,B).
  * Tighten debhelper.mk build-dependency hint for debhelper.  Closes:
    bug#522613, thanks to Adam D. Barratt and Russ Allbery.
  * Fix python-distutils.mk cleanup clashing with dh_clean (dh_clean
    chokes on dirnames containing trailing "-stamp"):
    + Remove stampdir before clean target
    + Use dirname not ending in "-stamp" (and while at it, use dir below
      debian dir to avoid clashing with upstream files)
    Either of above fixes the issue, and closes: bug#521568, thanks to
    Luca Falavigna.
  * Normalize headers to consistently use 1 line per copyright holder,
    one desription and then 1 empty line.
  * Rewrite debian/copyright to follow recent draft of proposed format:
    + Include all copyright holders (not only most project members)
    + Include all licenses (one file is restricted to GPL v2, other ones
      use different but still GPL2-compatible licenses)